--- a/mesin/package.json
+++ b/mesin/package.json
@@ -10,13 +10,14 @@
         "@iconify-icon/react": "^2.3.0",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/d3-cloud": "^1.2.9",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.1.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
@@ -31,10 +32,11 @@
         "apexcharts": "^4.4.0",
         "chart.js": "^4.4.7",
         "dayjs": "^1.11.13",
-        "faker": "^6.6.6",
+        "faker": "^5.5.3",
         "preline": "^2.7.0",
+        "prop-types": "^15.8.1",
         "react-chartjs-2": "^5.3.0",
-        "react-d3-cloud": "^1.0.6",
+        "react-d3-cloud": "^0.6.0",
         "react-dom": "^19.0.0",
         "react-tailwindcss-datepicker": "^1.7.2"
     }
