--- a/mesin/package.json
+++ b/mesin/package.json
@@ -31,6 +31,7 @@
         "@preline/select": "^2.5.2",
         "apexcharts": "^4.4.0",
         "chart.js": "^4.4.7",
+        "chartjs-plugin-datalabels": "^2.2.0",
         "dayjs": "^1.11.13",
         "faker": "^5.5.3",
         "preline": "^2.7.0",
