--- a/mesin/package.json
+++ b/mesin/package.json
@@ -40,6 +40,7 @@
         "react-chartjs-2": "^5.3.0",
         "react-d3-cloud": "^0.6.0",
         "react-dom": "^19.0.0",
-        "react-tailwindcss-datepicker": "^1.7.2"
+        "react-tailwindcss-datepicker": "^1.7.2",
+        "react-toastify": "^11.0.3"
     }
 }
