--- a/mesin/composer.json
+++ b/mesin/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "alajusticia/laravel-logins": "^1.2",
         "illuminate/collections": "*",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
@@ -17,7 +18,9 @@
         "nasrulfaizin/php-word-counter": "dev-master",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.10",
-        "tightenco/ziggy": "^2.0"
+        "stevebauman/location": "^7.5",
+        "tightenco/ziggy": "^2.0",
+        "whichbrowser/parser": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
