--- a/mesin/package.json
+++ b/mesin/package.json
@@ -30,21 +30,37 @@
         "@hookstate/core": "^4.0.1",
         "@inertiajs/react": "^2.0.3",
         "@preline/select": "^2.5.2",
+        "@radix-ui/react-avatar": "^1.1.9",
+        "@radix-ui/react-collapsible": "^1.1.10",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-popover": "^1.1.14",
+        "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.1.6",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.6",
         "apexcharts": "^4.4.0",
         "chart.js": "^4.4.7",
         "chartjs-plugin-datalabels": "^2.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "dayjs": "^1.11.13",
         "faker": "^5.5.3",
+        "lucide-react": "^0.511.0",
         "luxon": "^3.5.0",
         "preline": "^2.7.0",
         "prop-types": "^15.8.1",
         "react-chartjs-2": "^5.3.0",
-        "react-d3-cloud": "^0.6.0",
+        "react-day-picker": "^8.10.1",
         "react-dom": "^19.0.0",
         "react-tailwindcss-datepicker": "^1.7.2",
         "react-tailwindcss-select": "^1.8.5",
         "react-toastify": "^11.0.3",
+        "recharts": "^2.15.3",
         "sweetalert2": "^11.16.1",
-        "sweetalert2-react-content": "^5.1.0"
+        "sweetalert2-react-content": "^5.1.0",
+        "tailwind-merge": "^3.3.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
