--- a/mesin/package.json
+++ b/mesin/package.json
@@ -29,11 +29,13 @@
     "dependencies": {
         "@hookstate/core": "^4.0.1",
         "@inertiajs/react": "^2.0.3",
+        "@isoterik/react-word-cloud": "^1.2.0",
         "@preline/select": "^2.5.2",
         "@radix-ui/react-avatar": "^1.1.9",
         "@radix-ui/react-collapsible": "^1.1.10",
-        "@radix-ui/react-dialog": "^1.1.13",
-        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-navigation-menu": "^1.2.13",
         "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-separator": "^1.1.6",
@@ -47,6 +49,7 @@
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.13",
         "faker": "^5.5.3",
+        "framer-motion": "^12.12.2",
         "lucide-react": "^0.511.0",
         "luxon": "^3.5.0",
         "preline": "^2.7.0",
@@ -61,6 +64,7 @@
         "sweetalert2": "^11.16.1",
         "sweetalert2-react-content": "^5.1.0",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "vaul": "^1.1.2"
     }
 }
